--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@ body {
 .item1 {
   grid-column: 1 / 2;
   grid-row: 1 / 5;
-  min-width: 25vw;
+  min-width: 200px;
   display: flex;
   justify-content: center;
   align-items: start;
@@ -26,7 +26,7 @@ body {
 .item2 {
   grid-column: 2 / 4;
   grid-row: 1 / 2;
-  min-height: 50px;
+  min-height: 100px;
   background-color: #d0e7ff;
   display: flex;
   justify-content: left;
@@ -75,7 +75,7 @@ body {
   grid-row: 3 / 5;
   background-color: #ffffff;
   min-height: 100px;
-  min-width: 30vw;
+  min-width: 400px;
   display: flex;
   justify-content: center;
   align-items: start;
@@ -97,6 +97,7 @@ body {
 .item6 {
   grid-column: 1 / 4;
   grid-row: 5 / 6;
+  min-height: 60px;
   display: flex;
   justify-content: right;
   align-items: center;
@@ -153,65 +154,5 @@ body {
 
 div::-webkit-scrollbar {
   display: none;
-}
-
-@media (max-width: 990px) {
-  .item5 img {
-    width: 50%;
-  }
-  .item6 {
-    max-height: 13vh;
-  }
-}
-
-@media (max-width: 720px) {
-  .item6 {
-    font-size: 14px;
-    padding: 10px;
-    max-height: 10vh;
-  }
-  .item6 ul {
-    gap: 25px;
-  }
-  .x {
-    font-size: 9px;
-    padding: 3px;
-  }
-  .y {
-    font-size: 12px;
-    padding: 10px;
-    margin-left: 15px;
-  }
-}
-
-@media (max-width: 550px) {
-  .item6 {
-    font-size: 9px;
-    padding: 5px;
-    max-height: 30vh;
-  }
-  .item6 ul {
-    gap: 10px;
-  }
-  .x {
-    font-size: 7px;
-  }
-  .y {
-    font-size: 10px;
-    padding: 5px;
-    margin-left: 10px;
-  }
-}
-
-@media (max-width: 400px) {
-  .item6 {
-    font-size: 8px;
-  }
-  .x {
-    font-size: 6px;
-  }
-  .y {
-    font-size: 8px;
-  }
 }
 
