--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@ body {
   margin: 0;
   height: 100vh;
   display: grid;
-  grid-template-columns: 1fr 2fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-template-rows: 2fr 0.5fr 1fr 2fr 1fr;
   overflow: auto;
 }
@@ -11,108 +11,105 @@ body {
 .item1 {
   grid-column: 1 / 2;
   grid-row: 1 / 5;
-  min-width: 200px;
   display: flex;
   justify-content: center;
-  align-items: start;
+  align-items: center;
   text-align: justify;
-  font-size: 16px;
-  padding: 20px;
+  font-size: 1.7vw;
+  padding: 1vw;
   background-color: #fdd;
-  border: 1px solid #000000;
-  overflow-y: auto;
+  border: 0.1vw solid #000000;
+  overflow: hidden;
 }
 
 .item2 {
-  grid-column: 2 / 4;
+  grid-column: 2 / 5;
   grid-row: 1 / 2;
-  min-height: 100px;
+  min-height: 8vw;
   background-color: #d0e7ff;
   display: flex;
   justify-content: left;
-  align-items: start;
+  align-items: center;
   text-align: justify;
-  font-size: 15px;
-  padding-left: 20px;
-  padding-right: 150px;
-  border: 1px solid #000000;
-  overflow-y: auto;
+  font-size: 1.6vw;
+  padding: 2vw;
+  border: 0.1vw solid #000000;
+  overflow: hidden;
 }
 
 .item3 {
-  grid-column: 2 / 3;
+  grid-column: 2 / 4;
   grid-row: 2 / 3;
   background-color: #e5f2c9;
   display: flex;
   justify-content: right;
   align-items: center;
   text-align: right;
-  padding: 1em;
-  font-size: 12px;
-  border: 1px solid #000000;
+  padding: 0 2vw;
+  font-size: 1.2vw;
+  border: 0.1vw solid #000000;
 }
 
 .item4 {
-  grid-column: 3 / 4;
+  grid-column: 4 / 5;
   grid-row: 2 / 5;
-  min-width: 30vw;
-  padding-top: 20px;
   display: flex;
   justify-content: center;
-  align-items: start;
+  align-items: center;
+  padding-right: 2vw;
+  font-size: 1.5vw;
   background-color: #dff0d8;
-  border: 1px solid #000000;
-  overflow-y: auto;
+  border: 0.1vw solid #000000;
+  overflow: hidden;
 }
 
 .item4 ol {
   display: flex;
   flex-direction: column;
+  padding-left: 4vw;
 }
 
 .item5 {
-  grid-column: 2 / 3;
+  grid-column: 2 / 4;
   grid-row: 3 / 5;
   background-color: #ffffff;
-  min-height: 100px;
-  min-width: 400px;
+  min-height: 13vw;
   display: flex;
   justify-content: center;
-  align-items: start;
+  align-items: center;
   text-align: justify;
-  font-size: 11px;
-  padding: 20px;
-  border: 1px solid #000000;
-  overflow-y: auto;
+  font-size: 1.1vw;
+  padding: 1vw;
+  border: 0.1vw solid #000000;
+  overflow: hidden;
 }
 
 .item5 img {
   align-self: center;
-  max-width: 100%;
-  max-height: 100%;
+  max-width: 50vw;
+  max-height: 30vh;
   height: auto;
-  padding-right: 20px;
+  padding-right: 1vw;
 }
 
 .item6 {
-  grid-column: 1 / 4;
+  grid-column: 1 / 5;
   grid-row: 5 / 6;
-  min-height: 60px;
+  min-height: 7vw;
   display: flex;
-  justify-content: right;
+  justify-content: left;
   align-items: center;
-  padding-right: 40px;
-  font-size: 16px;
+  padding: 0 2vw;
+  font-size: 1.5vw;
   background-color: #d0e7ff;
-  border: 1px solid #000000;
+  border: 0.1vw solid #000000;
 }
 
 .item6 ul {
-  position: relative;
   list-style: none;
   display: grid;
   grid-auto-flow: column;
-  gap: 50px;
+  gap: 7vw;
 }
 
 .item6 a {
@@ -120,39 +117,31 @@ body {
 }
 
 .x {
-  grid-column: 3 / 4;
-  grid-row: 1 / 2;
-  margin-right: 20px;
-  margin-left: 70px;
-  min-width: 30px;
+  min-width: 7vw;
+  height: 2vw;
   width: auto;
-  justify-self: right;
   align-self: center;
-  padding: 10px;
+  margin-left: 2vw;
+  padding: 1vw;
   display: flex;
   justify-content: center;
   align-items: center;
-  border: 1px solid #000000;
+  font-size: 1.3vw;
+  border: 0.1vw solid #000000;
   background-color: white;
 }
 
 .y {
-  grid-column: 1 / 2;
-  grid-row: 5 / 6;
-  position: relative;
+  min-width: 7vw;
+  height: 2vw;
   width: auto;
-  justify-self: left;
-  align-self: center;
-  margin-left: 20px;
-  padding: 10px;
+  margin-right: 20vw;
+  padding: 1vw;
   display: flex;
   justify-content: center;
   align-items: center;
-  border: 1px solid #000000;
+  font-size: 1.3vw;
+  border: 0.1vw solid #000000;
   background-color: white;
-}
-
-div::-webkit-scrollbar {
-  display: none;
 }
 
